fix: JDK17 compatibility - replace remaining List.getFirst() usages
Additional List.getFirst() calls (JDK 21 API) surfaced by the grep sweep in
CypherExecutionPlan, OperationProgressRegistryTest and Issue5386OutOfRangeSeekTest.
Replaced with get(0) to keep the java17 branch compiling on Java 17.